--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -17,7 +17,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    <link rel="stylesheet" href="https://labs.vlabsdev.in/common-libraries/exp_common_library/css/style.css">
+    <link rel="stylesheet" href="./common_libraries/css/style.css">
     
 
     <style>
@@ -67,14 +67,14 @@
    
     
     <!-- all custom script files -->
-    <script src="https://labs.vlabsdev.in/common-libraries/exp_common_library/ts_components/tables.js"></script>
-    <script src="https://labs.vlabsdev.in/common-libraries/exp_common_library/ts_components/matrix.js"></script>
+    <script src="./common_libraries/js/ts_components/tables.js"></script>
+    <script src="./common_libraries/js/ts_components/matrix.js"></script>
     <script src="./js/gauss_ele.js"></script>
     <script src="./js/trap.js"></script>
-    <script src="https://labs.vlabsdev.in/common-libraries/exp_common_library/ts_components/questions.js"></script>
-    <script src="https://labs.vlabsdev.in/common-libraries/exp_common_library/ts_components/pannel.js"></script>
-    <script src="https://labs.vlabsdev.in/common-libraries/exp_common_library/ts_math_library/general_math_functions.js"></script>
-    <script src="https://labs.vlabsdev.in/common-libraries/exp_common_library/ts_components/collapse_step.js"></script>
+    <script src="./common_libraries/js/ts_components/questions.js"></script>
+    <script src="./common_libraries/js/ts_components/pannel.js"></script>
+    <script src="./common_libraries/js/ts_math_library/general_math_functions.js"></script>
+    <script src="./common_libraries/js/ts_components/collapse_step.js"></script>
     <script src="./js/data.js"></script>
 
     <!-- acitvity 1 -->
